--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/compiler-cli": "20.0.5",
     "@angular/language-service": "20.0.5",
     "@eslint/js": "^9.8.0",
+    "@nrwl/angular": "^19.8.4",
     "@nx/angular": "21.2.1",
     "@nx/cypress": "21.2.1",
     "@nx/eslint": "21.2.1",
