--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@angular/platform-browser-dynamic": "20.0.5",
     "@angular/router": "20.0.5",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "@ngrx/store": "^20.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "20.0.4",
@@ -26,6 +27,7 @@
     "@angular/compiler-cli": "20.0.5",
     "@angular/language-service": "20.0.5",
     "@eslint/js": "^9.8.0",
+    "@ngrx/store": "^20.0.1",
     "@nrwl/angular": "^19.8.4",
     "@nx/angular": "21.2.1",
     "@nx/cypress": "21.2.1",
