--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@angular/platform-browser": "20.0.5",
     "@angular/platform-browser-dynamic": "20.0.5",
     "@angular/router": "20.0.5",
+    "@ngrx/store": "^20.0.1",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.15.0",
-    "@ngrx/store": "^20.0.1"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "20.0.4",
@@ -27,6 +27,7 @@
     "@angular/compiler-cli": "20.0.5",
     "@angular/language-service": "20.0.5",
     "@eslint/js": "^9.8.0",
+    "@ngrx/signals": "^20.0.1",
     "@ngrx/store": "^20.0.1",
     "@nrwl/angular": "^19.8.4",
     "@nx/angular": "21.2.1",
