Home seite routing eingerichtet

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "articles": ["libs/features/articles/src/index.ts"],
+      "home": ["libs/features/home/src/index.ts"],
       "ui": ["libs/shared/ui/src/index.ts"]
     }
   },
