menu läuft jetzt stylen

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,7 +18,8 @@
       "articles": ["libs/features/articles/src/index.ts"],
       "home": ["libs/features/home/src/index.ts"],
       "state": ["libs/state/src/index.ts"],
-      "ui": ["libs/shared/ui/src/index.ts"]
+      "ui": ["libs/shared/ui/src/index.ts"],
+      "utils": ["libs/utils/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
